--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -22,13 +22,13 @@
     </div>
 
     <div class="col s12 m8 l9" id="right-panel">
-        <div class="row right-align">
-            <span class="col s6">
+        <div class="row" id="btn-container-article">
+            <span class="col s6 center-align btn-create-edit">
               <a class="waves-effect waves-light btn create" ng-href="/#/create">
                 Create
               </a>
             </span>
-            <span class="col s6 left-alight">
+            <span class="col s6 center-align btn-create-edit">
               <a class="waves-effect waves-light btn edit" ng-href="/#/edit/{{ displayGist.id }}">
                 Edit
               </a>
