--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,7 +1,7 @@
 
 <div class="row header">
   <div class="center-align col s12" id="landing">
-      <img src="/images/logo.png" width="15%"  alt="Gist Manager">
+      <img src="/images/logo1.png" width="15%"  alt="Gist Manager">
       <span class="logoname">
         <img src="/images/logoname.png"  width="60%" alt="Gist Manager">
       </span>
