--- a/public/views/default.html
+++ b/public/views/default.html
@@ -4,8 +4,8 @@
       <span class="logoname">
         <img src="/images/logoname.png"  width="60%" alt="Gist Manager">
       </span>
-      <div class="tagline">A simple way to create, manage, and organize Gists.</div>
-      <!-- <a ng-href="{{ authURL.url }}" class="btn waves-effect waves-light">Login With Github</a> -->
+      <div class="caption">A simple way to create, manage, and organize Gists.</div>
+      <a ng-href="{{ authURL.url }}" class="btn waves-effect waves-light">Login With Github</a>
       <a ng-href="/#/dashboard" class="btn waves-effect waves-light"><i class="material-icons left">web</i>Dashboard</a>
   </div>
 </div>
