--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -42,21 +42,44 @@ body {
   }
 }
 
-// Landing Page
+.btn {
+  background-color: #727272;
+}
+
+// ------------- Landing Page
 #landing {
   padding: 20% 10%;
   color: #FFF;
 }
 
 .header {
-    display: table;
-    position: relative;
-    width: 100%;
-    // height: 400px;
-    background-color: #4CAF50;
-    background: url('/images/background.jpeg') no-repeat center center scroll;
-    background-size: cover;
-    -o-background-size: cover;
+  display: table;
+  position: relative;
+  width: 100%;
+  // height: 400px;
+  background-color: #4CAF50;
+  background: url('/images/background.jpeg') no-repeat center center scroll;
+  background-size: cover;
+  -o-background-size: cover;
+  margin-bottom: 0px;
+}
+
+#dash-header {
+background-color: #388E3C;
+// -webkit-box-shadow: 0px 0px 10px 0.1px #000000;
+// -moz-box-shadow: 0px 0px 8px 2px #000000;
+//box-shadow: 0px 0px 8px 2px #000000;
+z-index:1;
+}
+
+.tagline {
+  color:#FFF;
+  font-size: 20px;
+  padding: 10px 0;
+}
+
+.logoname {
+  padding-left: 20px
 }
 // ------------- Main Dashboard Views
 #collection-article {
@@ -134,11 +157,20 @@ height:40px;
 }
 
 .btn {
-  &.create, &.edit {
+  &.create, &.edit, {
     height: 100%;
     width: 100%;
     font-size: 1.6em;
   }
+  &:hover {
+    // background-color: #388E3C;
+    // background-color: #C8E6C9;
+    background-color: #4CAF50
+  }
+  &#create-gist {
+    width:30%;
+  }
+
 }
 
 
@@ -182,17 +214,6 @@ p#gistFileName {
   padding-left: 4%;
   padding-right: 4%;
 }
-.tagline{
-  color:#FFF;
-  font-size: 20px;
-  padding: 10px 0;
-}
-.btn {
-  background-color: #727272;
-}
-.logoname{
-  padding-left: 20px
-}
 // Commons
 
 // Navigations
@@ -210,3 +231,56 @@ footer.page-footer {
   background-color: #388E3C;
   font-size: 0.8em;
 }
+
+// -------------- Create gist
+
+#createContainer.row {
+  background-color: #FFF;
+  margin-bottom: 0px;
+}
+
+#btn-create-gist {
+  width: 30%;
+}
+
+textarea.materialize-textarea {
+  height: 50%;
+  min-height: 20rem;
+}
+
+.input-field {
+  padding-left: 5%;
+  padding-right: 5%;
+
+  label {
+    padding-left: 2.5%;
+    color: #388E3C;
+
+    &.active {
+      transform: translateY(-0%);
+    }
+  }
+}
+
+h3.input-field {
+  padding-left: 8%;
+  padding-top: 30px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#new_gist_description, #textarea-create-edit {
+  font-size: 1.4em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 25px;
+}
+
+#create-gist-title {
+  float: left;
+}
+
+#create-gist-title-btn {
+  float: left;
+}
+
