--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -10,13 +10,8 @@
     <div class ="row" id="createContainer">
 
       <div class ="row">
-        <span id="create-gist-title">
           <h3 class="input-field" value="">Edit {{edit_gist.description}}</h3>
           <h6 id="editGistFileName"></h6>
-        </span>
-        <span id="create-gist-title-btn">
-          <a ng-href="/#/dashboard" class="btn back-btn">Back to Gists</a>
-        </span>
       </div>
 
       <div class="row input-field" id="new_gist_description">
@@ -31,6 +26,7 @@
       </div>
 
       <div class ="row center-align">
+        <a ng-href="/#/dashboard" class="btn back-btn">Back</a>
         <a class="waves-effect waves-light btn save" ng-click="GistService.editGist(cookies, edit_gist, gist_id); process_done()">Save</a>
         <a class="waves-effect waves-light btn delete" ng-click="GistService.deleteGist(cookies, gist_id); process_done()">Delete</a>
       </div>
