--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -157,9 +157,7 @@ height:40px;
 }
 
 .btn {
-  &.create, &.edit, {
-    height: 100%;
-    width: 100%;
+  &.create, &.edit, &.back-btn, &.delete, &.save{
     font-size: 1.6em;
   }
   &:hover {
@@ -167,8 +165,11 @@ height:40px;
     // background-color: #C8E6C9;
     background-color: #4CAF50
   }
-  &#create-gist {
-    width:30%;
+  &.create, &.edit {
+    width:100%;
+    height:100%;
+  }
+  &.back-btn {
   }
 
 }
@@ -243,6 +244,16 @@ footer.page-footer {
   width: 30%;
 }
 
+// .arrow-right {
+//   width: 0;
+//   height: 0;
+//   border-top: 5px solid transparent;
+//   border-bottom: 5px solid transparent;
+
+//   border-left: 5px solid #388E3C;
+// }
+//------------------------
+
 textarea.materialize-textarea {
   height: 50%;
   min-height: 20rem;
@@ -253,7 +264,7 @@ textarea.materialize-textarea {
   padding-right: 5%;
 
   label {
-    padding-left: 2.5%;
+    padding-left: 4%;
     color: #388E3C;
 
     &.active {
@@ -263,7 +274,7 @@ textarea.materialize-textarea {
 }
 
 h3.input-field {
-  padding-left: 8%;
+  padding-left: 5%;
   padding-top: 30px;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -275,12 +286,3 @@ h3.input-field {
   margin-bottom: 0px;
   padding-top: 25px;
 }
-
-#create-gist-title {
-  float: left;
-}
-
-#create-gist-title-btn {
-  float: left;
-}
-
