modify auth.js url

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -6,6 +6,6 @@
     </span>
     <div class="caption">A simple way to create, manage, and organize Gists.</div>
     <a ng-href="{{ authURL.url }}" class="btn waves-effect waves-light">Login With Github</a>
-    <a ng-href="/#/dashboard" class="btn waves-effect waves-light"><i class="material-icons left">web</i>Dashboard</a>
+    <a ng-href="/dashboard" class="btn waves-effect waves-light"><i class="material-icons left">web</i>Dashboard</a>
   </div>
 </div>
