added dashed line for left-panel right border: 1px solid dashed grey

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -8,7 +8,7 @@
 <div class="container">
 
   <div class="row" id="collection-article">
-    <div class="col s12 m4 l3" id="left-panel">
+    <div class="col s10 offset-s1 m4 l3" id="left-panel">
 
       <ul class="collection">
 
@@ -27,7 +27,7 @@
 
     </div>
 
-    <div class="col s12 m8 l9" id="right-panel">
+    <div class="col s10 offset-s1 m8 l9" id="right-panel">
         <div class="row" id="btn-container-article">
             <span class="col s6 center-align btn-create-edit">
               <a class="waves-effect waves-light btn create" ng-href="/#/create">
