--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,163 +82,163 @@ body {
   #left-panel ul.collection {
     margin: 0px; }
 
-/* line 99, stdin */
-#right-panel {
-  border-left: 2px dashed #B6B6B6; }
-
-/* line 103, stdin */
+/* line 100, stdin */
 #search:placeholder {
   color: #000; }
 
-/* line 107, stdin */
+/* line 104, stdin */
 input::placeholder {
   color: #000; }
 
-/* line 111, stdin */
+/* line 108, stdin */
 input#searchBar {
   color: #212121;
   font-size: 1.6em;
   border: none;
   margin-bottom: 0px; }
 
-/* line 118, stdin */
+/* line 115, stdin */
 input#search[placeholder] {
   color: black; }
 
-/* line 123, stdin */
+/* line 120, stdin */
 .collection {
   border: none; }
 
-/* line 127, stdin */
+/* line 124, stdin */
 li.collection-item.ng-binding.ng-scope {
   color: #000;
   border-top: 1px dashed #B6B6B6;
   border-bottom: 1px dashed #B6B6B6; }
 
-/* line 135, stdin */
+/* line 132, stdin */
 li.collection-item.ng-binding.ng-scope:hover {
   background-color: #C8E6C9; }
 
-/* line 140, stdin */
+/* line 138, stdin */
+#left-panel {
+  border: 1px dashed #B6B6B6; }
+
+/* line 143, stdin */
 #right-panel {
   background-color: #FFF; }
 
-/* line 145, stdin */
+/* line 148, stdin */
 #btn-container-article {
   margin-top: 12px; }
 
-/* line 149, stdin */
+/* line 152, stdin */
 .crudButtons {
   background-color: #388E3C;
   padding-top: 9px;
   padding-bottom: 9px; }
 
-/* line 155, stdin */
+/* line 158, stdin */
 .btn-create-edit {
   height: 40px; }
 
-/* line 160, stdin */
+/* line 163, stdin */
 .btn.create, .btn.edit, .btn.back-btn, .btn.delete, .btn.save {
   font-size: 1.6em; }
 
-/* line 163, stdin */
+/* line 166, stdin */
 .btn:hover {
   background-color: #4CAF50; }
 
-/* line 168, stdin */
+/* line 171, stdin */
 .btn.create, .btn.edit {
   width: 100%;
   height: 100%; }
 
-/* line 178, stdin */
+/* line 181, stdin */
 div.view-gist-info {
   padding-left: 7%;
   padding-right: 7%; }
-  /* line 182, stdin */
+  /* line 185, stdin */
   div.view-gist-info #gistFileName {
     margin-top: 0px;
     color: #388E3C;
     margin-top: 0px; }
-  /* line 188, stdin */
+  /* line 191, stdin */
   div.view-gist-info #gistFileContent {
     margin-top: 0px; }
 
-/* line 193, stdin */
+/* line 196, stdin */
 h4#gistTitle {
   margin-top: 0px;
   margin-bottom: 10px; }
 
-/* line 198, stdin */
+/* line 201, stdin */
 p#gistFileName {
   margin-bottom: 0px; }
 
-/* line 204, stdin */
+/* line 207, stdin */
 #editGistTitle {
   color: #FFF;
   margin-bottom: 0px;
   margin-top: -10px; }
 
-/* line 209, stdin */
+/* line 212, stdin */
 #editGistFileName {
   margin-top: 0px;
   color: #C8E6C9; }
 
-/* line 213, stdin */
+/* line 216, stdin */
 #editGistContent {
   background-color: #FFF;
   padding-left: 4%;
   padding-right: 4%; }
 
-/* line 221, stdin */
+/* line 224, stdin */
 .nav-wrapper {
   background-color: #388E3C; }
 
 @media screen and (max-width: 480px) {
-  /* line 225, stdin */
+  /* line 228, stdin */
   .tagline {
     font-size: 14px; } }
 
-/* line 229, stdin */
+/* line 232, stdin */
 footer.page-footer {
   margin-top: 0px;
   padding-top: 0px;
   background-color: #388E3C;
   font-size: 0.8em; }
 
-/* line 238, stdin */
+/* line 241, stdin */
 #createContainer.row {
   background-color: #FFF;
   margin-bottom: 0px; }
 
-/* line 243, stdin */
+/* line 246, stdin */
 #btn-create-gist {
   width: 30%; }
 
-/* line 257, stdin */
+/* line 260, stdin */
 textarea.materialize-textarea {
   height: 50%;
   min-height: 20rem; }
 
-/* line 262, stdin */
+/* line 265, stdin */
 .input-field {
   padding-left: 5%;
   padding-right: 5%; }
-  /* line 266, stdin */
+  /* line 269, stdin */
   .input-field label {
     padding-left: 4%;
     color: #388E3C; }
-    /* line 270, stdin */
+    /* line 273, stdin */
     .input-field label.active {
       transform: translateY(0%); }
 
-/* line 276, stdin */
+/* line 279, stdin */
 h3.input-field {
   padding-left: 5%;
   padding-top: 30px;
   margin-top: 0px;
   margin-bottom: 0px; }
 
-/* line 283, stdin */
+/* line 286, stdin */
 #new_gist_description, #textarea-create-edit {
   font-size: 1.4em;
   margin-top: 0px;
