--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -35,24 +35,31 @@
     </div>
 
     <div class="col s12 m8 l9" id="right-panel">
-        <div class="row" id="btn-container-article">
+        <!-- <div class="row" id="btn-container-article">
             <span class="col s6 center-align btn-create-edit">
               <a class="waves-effect waves-light btn create" ng-href="/#/create">
                 Create
               </a>
             </span>
             <span class="col s6 center-align btn-create-edit">
-              <a class="waves-effect waves-light btn edit" ng-href="/#/edit/{{ displayGist.id }}">
-                Edit
-              </a>
+
             </span>
-        </div>
+        </div> -->
 
         <div class="row view-gist-info">
           <div ng-repeat="file in displayGist.files">
-              <h4 id="gistTitle">{{ displayGist.description }}</h4>
-              <p id="gistFileName">File Name: {{ file.filename }}</p>
-              <p id="gistFileContent">{{ file.content }}</p>
+            <div class="col s6">
+                <h4 id="gistTitle">{{ displayGist.description }}</h4>
+            </div>
+            <div class="col s6">
+              <a class="waves-effect waves-light btn edit" ng-href="/#/edit/{{ displayGist.id }}">Edit</a>
+            </div>
+            <div class="col s12">
+                <p id="gistFileName">File Name: {{ file.filename }}</p>
+            </div>
+            <div class="col s12">
+                <p id="gistFileContent">{{ file.content }}</p>
+            </div>
           </div>
         </div>
     </div>
